# zipper

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  setup.sh
gflags/src/: gflags.cc  gflags_completions.cc  gflags_reporting.cc
include/: Error.hpp  Gflags_defines.hpp  Log.hpp  Misc.hpp  Utils.hpp  Version.hpp  Version.hpp.in  Zip.hpp  ZipEntry.hpp  Zip_structs.hpp
src/: App.cpp  CMakeLists.txt  Log.cpp  Main.cpp  Misc.cpp  Utils.cpp  Zip.cpp  ZipEntry.cpp  Zip_structs.cpp
src/tools/: CMakeLists.txt  README.md
src/tools/zipviewer/: CMakeLists.txt  main.cpp
src/zipcxx/: CMakeLists.txt  Zip.cpp  Zip.hpp  ZipEntry.cpp  ZipEntry.hpp  ZipStructs.cpp  ZipStructs.hpp
src/zipcxx/ut/: CMakeLists.txt  README.md
src/zipcxx/ut/TemplateTest/: CMakeLists.txt  TemplateTest.cpp
src/zipcxx/ut/TestBasicMethods/: CMakeLists.txt  TestBasicMethods.cpp
src/zipcxx/ut/TestInvalidChecksum/: CMakeLists.txt  TestInvalidChecksum.cpp
src/zipcxx/ut/TestUnpackArchive/: CMakeLists.txt  TestUnpackArchive.cpp
src/zipcxx/utils/: CMakeLists.txt  Log.cpp  Log.hpp  Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  main.cpp
